RESOLVED FIXED39231
Fix rendering and selection failures in fast/multicol/layers-in-multicol.html
https://bugs.webkit.org/show_bug.cgi?id=39231
Summary Fix rendering and selection failures in fast/multicol/layers-in-multicol.html
Dave Hyatt
Reported 2010-05-17 13:17:25 PDT
Fix some issues exposed by the test.
Attachments
Patch (6.65 KB, patch)
2010-05-17 13:17 PDT, Dave Hyatt
mitz: review+
Dave Hyatt
Comment 1 2010-05-17 13:17:45 PDT
Dave Hyatt
Comment 2 2010-05-17 13:29:14 PDT
Fixed in r59624.
WebKit Review Bot
Comment 3 2010-05-17 14:26:26 PDT
http://trac.webkit.org/changeset/59624 might have broken GTK Linux 32-bit Debug
Note You need to log in before you can comment on or make changes to this bug.