https://bugs.webkit.org/show_bug.cgi?id=39231

Reviewed by Dan Bernstein.

Fix failures in the RTL portion of fast/multicol/layers-in-multicol.html.  Make sure block children of RTL blocks are positioned using
the reduced column width instead of the total content width.

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::determineHorizontalPosition):
(WebCore::RenderBlock::nodeAtPoint):
(WebCore::RenderBlock::hitTestContents):
(WebCore::RenderBlock::adjustForColumns):



Canonical link: https://commits.webkit.org/50760@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59624 268f45cc-cd09-0410-ab3c-d52691b4dbfc