WebCore/rendering/RenderBlock.cpp
@@ -1155,9 +1155,8 @@ int RenderBlock::estimateVerticalPosition(RenderBox* child, const MarginInfo& ma
 
 void RenderBlock::determineHorizontalPosition(RenderBox* child)
 {
+    int xPos = borderLeft() + paddingLeft();
     if (style()->direction() == LTR) {
-        int xPos = borderLeft() + paddingLeft();
-        
         // Add in our left margin.
         int chPos = xPos + child->marginLeft();
         
@@ -1183,7 +1182,7 @@ void RenderBlock::determineHorizontalPosition(RenderBox* child)
         view()->addLayoutDelta(IntSize(child->x() - chPos, 0));
         child->setLocation(chPos, child->y());
     } else {
-        int xPos = width() - borderRight() - paddingRight() - verticalScrollbarWidth();
+        xPos += availableWidth();
         int chPos = xPos - (child->width() + child->marginRight());
         if (child->avoidsFloats()) {
             int rightOff = rightOffset(height(), false);
@@ -3323,12 +3322,16 @@ bool RenderBlock::nodeAtPoint(const HitTestRequest& request, HitTestResult& resu
         }
 
         // Hit test contents if we don't have columns.
-        if (!hasColumns() && hitTestContents(request, result, _x, _y, scrolledX, scrolledY, hitTestAction))
+        if (!hasColumns() && hitTestContents(request, result, _x, _y, scrolledX, scrolledY, hitTestAction)) {
+            updateHitTestResult(result, IntPoint(_x - tx, _y - ty));
             return true;
-            
+        }
+
         // Hit test our columns if we do have them.
-        if (hasColumns() && hitTestColumns(request, result, _x, _y, scrolledX, scrolledY, hitTestAction))
+        if (hasColumns() && hitTestColumns(request, result, _x, _y, scrolledX, scrolledY, hitTestAction)) {
+            updateHitTestResult(result, IntPoint(_x - tx, _y - ty));
             return true;
+        }
 
         // Hit test floats.
         if (hitTestAction == HitTestFloat && m_floatingObjects) {
@@ -3405,20 +3408,16 @@ bool RenderBlock::hitTestContents(const HitTestRequest& request, HitTestResult& 
 {
     if (childrenInline() && !isTable()) {
         // We have to hit-test our line boxes.
-        if (m_lineBoxes.hitTest(this, request, result, x, y, tx, ty, hitTestAction)) {
-            updateHitTestResult(result, IntPoint(x - tx, y - ty));
+        if (m_lineBoxes.hitTest(this, request, result, x, y, tx, ty, hitTestAction))
             return true;
-        }
     } else {
         // Hit test our children.
         HitTestAction childHitTest = hitTestAction;
         if (hitTestAction == HitTestChildBlockBackgrounds)
             childHitTest = HitTestChildBlockBackground;
         for (RenderBox* child = lastChildBox(); child; child = child->previousSiblingBox()) {
-            if (!child->hasSelfPaintingLayer() && !child->isFloating() && child->nodeAtPoint(request, result, x, y, tx, ty, childHitTest)) {
-                updateHitTestResult(result, IntPoint(x - tx, y - ty));
+            if (!child->hasSelfPaintingLayer() && !child->isFloating() && child->nodeAtPoint(request, result, x, y, tx, ty, childHitTest))
                 return true;
-            }
         }
     }
     
@@ -3938,7 +3937,7 @@ void RenderBlock::adjustForColumns(IntSize& offset, const IntPoint& point) const
 
     int gapWidth = columnGap();
     
-    int xOffset = 0;
+    int xOffset = style()->direction() == LTR ? 0 : contentWidth() - columnRects[0].width();
     int yOffset = 0;
     size_t columnCount = columnRects.size();
     for (size_t i = 0; i < columnCount; ++i) {
